--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,15 @@ flask-wtf = "*"
 gunicorn = "*"
 flask = "==1.1.2"
 flask-script = "*"
+flask-sqlalchemy = "*"
+psycopg2 = "*"
+flask-migrate = "==2.2.0"
+flask-login = "*"
+email-validator = "*"
+flask-uploads = "*"
+flask-mail = "*"
+flask-simplemde = "*"
+markdown2 = "*"
 
 [dev-packages]
 
